<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_1"
    >
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/viewAboutUs"
            android:layout_margin="10dp"
            android:text="@string/appDescription"
            />
        <View
            android:id="@+id/viewAboutUs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/emailAboutUs"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/viewAboutUs"
            android:text="@string/myEmail"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/emailAboutUs"
            android:text="@string/myPhoneNumber"
            />
    </RelativeLayout>
</RelativeLayout>