<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_1"
    >

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/etPassword"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        android:hint="Email"
        android:layout_margin="10dp"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btnSignIn"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:hint="Password"
        android:layout_margin="10dp"
        />
    <View
        android:id="@+id/view_signUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/buttons"
        android:onClick="signIn"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/tvNewAcc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/new_acc"
        android:onClick="goToSignUp"
        android:clickable="true"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/tvNewAcc"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/resetPassword"
        android:clickable="true"
        android:textColor="@color/black"
        />


</RelativeLayout>